docs actualizados y docker compose
